--- a/nosotros/style.css
+++ b/nosotros/style.css
@@ -1,13 +1,19 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
+    box-sizing: content-box;
+  
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
-.container, .box, .titulo, .content, .redes-sociales{
+
+.
+/*.container, .box, .titulo, .content, .redes-sociales{
     width: 100%;
 }
 .container{
+
     max-width: 1150px;
     margin: auto;
     margin-top: 50px;
@@ -23,8 +29,10 @@
 .titulo h1{
     margin-bottom: 25px;
 }
+/*
 .content{
-    display: grid;
+    
+    /<display: grid;
     grid-template-columns: repeat(4,1fr);
     gap:55px;
 }
@@ -32,17 +40,22 @@
     width: 100%;
     height: 250px;
     border-radius: 50%;
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;
     position: relative;
     overflow: hidden;
     
-}
-.box figure img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+}*/
+/*
+. .box{
+    width: 15%;
+    height: 15%;
+   display: inline-block;
+   padding: 25px;
+   border-radius: 50%;
+    
+    
  
-}
+}/*
 .redes-sociales{
     position: absolute;
     bottom: 0; 
